# distroless

./: WORKSPACE
private/pkg/test/oci_image/: fat_image_sbom.spdx.json  image_amd64.spdx.json  image_arm64.spdx.json
private/repos/: java.MODULE.bazel
private/repos/deb/: bookworm.lock.json  bookworm.yaml  bookworm_java.lock.json  bookworm_java.yaml  bookworm_python.lock.json  bookworm_python.yaml
